--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
+$font-family: "Noto Sans TC", sans-serif;
 $font-l: 48px;
 $font-m: 32px;
 $font-s: 24px;
-$line-height: 1.6;
